--- a/topografiya/templates/leader/komeral/checking_komeral_works.html
+++ b/topografiya/templates/leader/komeral/checking_komeral_works.html
@@ -976,8 +976,19 @@
                                                     <div class="mb-3 row">
                                                         <label class="col-sm-3 col-form-label">Оценка качества работ <sup class="text-danger">*</sup></label>
                                                         <div class="col-sm-9">
-                                                            <input class="form-control" type="number"  id="a61" name="a61" value="{{ work.a61 }}"  placeholder="">
+{#                                                            <input class="form-control" type="number"  id="a61" name="a61" value="{{ work.a61 }}"  placeholder="">#}
+{#                                                        </div>#}
+                                                            <select class="col-sm-12"  name="a61" id="a61">
+                                                                <option value="">--- ---</option>
+                                                                <option value="отлично" {% if work.a61 == 'отлично' %}selected{% endif  %}>отлично</option>
+                                                                <option value="хорошо" {% if work.a61 == 'хорошо' %}selected{% endif  %}>хорошо</option>
+                                                                <option value="удовлетворительно" {% if work.a61 == 'удовлетворительно' %}selected{% endif  %}>удовлетворительно</option>
+                                                            </select>
+
+
+
                                                         </div>
+
                                                     </div>
                                                     <div class="mb-3 row">
                                                         <label class="col-sm-3 col-form-label">Работу сдал</label>
@@ -1229,6 +1240,10 @@
         event.preventDefault();
 
        if($('#akt_komeral_file')[0].files[0] != undefined){
+        if($('#a61').val() == 0){
+           alert("Ishni baxolash maydonini to'ldiring va saqlash tugmasini bosing");
+        }
+        else{
         $.ajax({
             type: 'POST',
             url: '{% url 'sent_to_check_akt' %}',
@@ -1244,6 +1259,7 @@
               alert('Ajax da xatolik !! ');
             }
         });
+        }
 
 
        }
@@ -1361,7 +1377,7 @@
             contentType: false,
             processData: false,
             success: function (result){
-                $('#doing_program_work_file').click();
+                $('#doing_akt_komeral_file').click();
                location.replace('/leader_komeral_works');
             },
 
