--- a/topografiya/templates/leader/show_worker.html
+++ b/topografiya/templates/leader/show_worker.html
@@ -59,6 +59,14 @@
                                   </div>
                                 </div>
 
+                                 <div class="form-group">
+                                  <label>Лавозими</label>
+                                  <div class="input-group"><span class="input-group-text"><i class="fa fa-user"></i></span>
+                                    <input class="form-control" type="text" required="" id="position" name="position" value="{{ worker.position }}">
+                                  </div>
+                                </div>
+
+
                               <div class="form-group">
                                   <label>Бўлим</label>
                                   <div class="input-group"><span class="input-group-text"><i class="fa fa-group"></i></span>
@@ -71,6 +79,8 @@
 {#                                     </select>#}
                                   </div>
                                 </div>
+
+
 
                              <div class="form-group">
                                   <label>Статуси</label>
