--- a/topografiya/templates/geodezis/head_komeral/checking_komeral_works.html
+++ b/topografiya/templates/geodezis/head_komeral/checking_komeral_works.html
@@ -115,15 +115,22 @@
               <div class="modal-body">
                   <div class="row">
                       <div class="col-md-12">
+
                             <ol>
-                                {% for work in rejects %}
-                                    <hr>
-                                       <li><a href="/{{ work.file }}"> Қайтариш сабаби аризаси</a></li>
-                                       <li>{{ work.reason }}</li>
-                                    <hr>
-                                {% endfor %}
+                                    {% for work in rejects %}
+                                        <li>
+                                            <ul>
+                                               <li class="p-1"><b class="text-primary">Қайтариш сабаби: </b> {{ work.reason }}</li>
+                                                {% if work.file %}
+                                                    <li class="p-1"><a href="/{{ work.file }}" target="_blank"><i class="fa fa-file-pdf-o"></i> Қайтариш сабаби иловаси</a></li>
+                                                {% endif %}
+                                            </ul>
+                                            <hr>
+                                        </li>
+                                    {% endfor %}
 
                             </ol>
+
                       </div>
                   </div>
               </div>
@@ -499,14 +506,25 @@
                                             </div>
                                         </li>
 
-                                              <li class="file-box m-t-5">
+                                             <li class="file-box m-t-5">
+                                            <div class="file-top"><i class="fa fa-file-pdf-o f-36 txt-primary"></i>
+                                            </div>
+                                            <div class="file-bottom ">
+                                                <h6>7. Топографический план </h6>
+                                                <p>Ознакомиться с файлом отправки</p>
+                                                <button class="btn btn-primary w-100 m-t-10"><a href="/{{ workerobject.topo_plan }}" target="_blank" class="text-white">Кўриш</a></button>
+                                            </div>
+                                        </li>
+
+                                        <li class="file-box m-t-5">
                                             <div class="file-top"><i class="fa fa-file-pdf-o txt-primary"></i></div>
                                             <div class="file-bottom ">
-                                                <h6>7. Предписание </h6>
+                                                <h6>8. Предписание </h6>
                                                 <p>Ознакомиться с файлом отправки</p>
                                                 <button class="btn btn-primary w-100 m-t-10"><a href="#" target="_blank" class="file text-white" data-id="{{ workerobject.object.id }}">Кўриш</a></button>
                                             </div>
                                         </li>
+
 
                                         {% if programwork %}
                                             {% if programwork.status == 4 %}
@@ -515,7 +533,7 @@
                                                 <div class="file-bottom ">
                                                     <h6>8. Топографик-геодезик дастури </h6>
                                                     <p>Ознакомиться с файлом отправки</p>
-                                                    <button class="btn btn-primary w-100 m-t-10"><a href="#" id="doing_program_work_file" programwork-id="{{ programwork.id }}" class="text-white"> Кўриш</a></button>
+                                                    <button class="btn btn-primary w-100 m-t-10"><a href="#" id="doing_program_work_file" programwork-id="{{ programworkform.id }}" class="text-white"> Кўриш</a></button>
                                                 </div>
                                             </li>
                                         {% endif %}
@@ -663,7 +681,7 @@
             processData: false,
 
             success: function (result){
-                window.open('/static/files/program-work/program_work_file.pdf','_blank');
+                window.open('/static/files/'+result,'_blank');
 {#                var link = document.createElement('a');#}
 {#                link.href = "/static/files/file.pdf";#}
 {#                link.download = "file_" + new Date() + ".pdf";#}
