--- a/topografiya/templates/leader/komeral/show_komeral_work.html
+++ b/topografiya/templates/leader/komeral/show_komeral_work.html
@@ -523,7 +523,7 @@
                                                 <div class="file-bottom ">
                                                     <h6>8. Топографик-геодезик дастури </h6>
                                                     <p>Ознакомиться с файлом отправки</p>
-                                                    <button class="btn btn-primary w-100 m-t-10"><a href="#" id="doing_program_work_file" programwork-id="{{ programwork.id }}" class="text-white"> Кўриш</a></button>
+                                                    <button class="btn btn-primary w-100 m-t-10"><a href="#" id="doing_program_work_file" programwork-id="{{ programworkform.id }}" class="text-white"> Кўриш</a></button>
                                                 </div>
                                             </li>
                                         {% endif %}
@@ -1297,7 +1297,6 @@
         var data = new FormData();
         data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
         data.append("data-id", $(this).attr('programwork-id'));
-        {#alert($(this).attr('data-id'));#}
         event.preventDefault()
         $.ajax({
             type: 'POST',
@@ -1356,7 +1355,7 @@
 
     });
 </script>
-                    <script type="text/javascript">
+                                            <script type="text/javascript">
     $(document).on('click',"#doing_akt_polevoy_file",function(){
         var data = new FormData();
         data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
@@ -1372,7 +1371,7 @@
             processData: false,
 
             success: function (result){
-                window.open('/static/files/akt_polevoy/akt-polevoy.pdf','_blank');
+                window.open('/static/files/'+result,'_blank');
 {#                var link = document.createElement('a');#}
 {#                link.href = "/static/files/file.pdf";#}
 {#                link.download = "file_" + new Date() + ".pdf";#}
