--- a/topografiya/templates/worker/object_poyasitelniy_form.html
+++ b/topografiya/templates/worker/object_poyasitelniy_form.html
@@ -1328,7 +1328,7 @@
                                              <button class="btn btn-success edit_poyasitelniy" type="button" status-id="0"> <i class="fa fa-check"></i> Saqlash</button>
                                          {% endif %}
                                          {% if aktkomeral.status == 2 %}
-                                                        <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                                        <button class="btn btn-success edit_poyasitelniy" status-id="0" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                          {% endif %}
                                         <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
                                     </div>
@@ -1410,14 +1410,14 @@
                                                      <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">Yakunlash</button>
                                              {% endif %}
                                             {% if work.status == 2 %}
-                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
+                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">Yakunlash</button>
                                              {% endif %}
                                             {% if  work.status_geodezis_komeral == 2 %}
-                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
+                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">Yakunlash</button>
                                              {% endif %}
 
                                             {% if aktkomeral.status == 2 %}
-                                                        <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
+                                                        <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">Yakunlash</button>
                                             {% endif %}
 
 
@@ -1768,6 +1768,7 @@
         data.append("b18_5", $('#b18_5').val());
 
         data.append("status-id", $(this).attr('status-id'));
+
         var id = $('#obj_id').val();
 
         if($(this).attr('status-id') != 1){
